--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 EMAIL_USER=glowhavenbypallavi@gmail.com
 EMAIL_PASS= nzdm qcne vsiw vixf
+MONGO_URL=mongodb+srv://user1210:Q3jrDucJ32OCoqcL@cluster0.4aniz.mongodb.net/GlowHaven
+JWT_SECRET=glowhaven123
+PORT=5000
